--- a/tv-script-generation/requirements.txt
+++ b/tv-script-generation/requirements.txt
@@ -1,19 +1,29 @@
+absl-py==0.2.0
 appdirs==1.4.3
 appnope==0.1.0
+astor==0.6.2
+backcall==0.1.0
 bleach==2.0.0
+botocore==1.8.20
+certifi==2018.4.16
 decorator==4.0.11
+docutils==0.14
 entrypoints==0.2.2
+gast==0.2.0
+grpcio==1.11.0
 html5lib==0.999999999
-ipykernel==4.5.2
-ipython==5.3.0
+ipykernel==4.8.2
+ipython==6.3.1
 ipython-genutils==0.2.0
-ipywidgets==6.0.0
+jedi==0.12.0
 Jinja2==2.9.5
+jmespath==0.9.3
 jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.0.0
-jupyter-console==5.1.0
-jupyter-core==4.3.0
+jupyter-client==5.2.3
+jupyter-core==4.4.0
+jupyterlab==0.32.0
+jupyterlab-launcher==0.10.5
+Markdown==2.6.11
 MarkupSafe==1.0
 mistune==0.7.4
 nbconvert==5.1.1
@@ -22,23 +32,30 @@ notebook==4.4.1
 numpy==1.12.1
 packaging==16.8
 pandocfilters==1.4.1
+parso==0.2.0
 pexpect==4.2.1
 pickleshare==0.7.4
-prompt-toolkit==1.0.14
+prompt-toolkit==1.0.15
 protobuf==3.2.0
 ptyprocess==0.5.1
+pyasn1==0.4.2
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pyzmq==16.0.2
 qtconsole==4.3.0
+rsa==3.4.2
+s3transfer==0.1.12
 simplegeneric==0.8.1
 six==1.10.0
-tensorflow==1.0.0
+tensorboard==1.6.0
+tensorflow==1.6.0
+termcolor==1.1.0
 terminado==0.6
 testpath==0.3
 tornado==4.4.3
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5
+Werkzeug==0.14.1
 widgetsnbextension==2.0.0
