--- a/tv-script-generation/requirements.txt
+++ b/tv-script-generation/requirements.txt
@@ -3,7 +3,7 @@ appdirs==1.4.3
 appnope==0.1.0
 astor==0.6.2
 backcall==0.1.0
-bleach==2.0.0
+bleach==1.5.0
 botocore==1.8.20
 certifi==2018.4.16
 decorator==4.0.11
@@ -11,7 +11,7 @@ docutils==0.14
 entrypoints==0.2.2
 gast==0.2.0
 grpcio==1.11.0
-html5lib==0.999999999
+html5lib==0.9999999
 ipykernel==4.8.2
 ipython==6.3.1
 ipython-genutils==0.2.0
@@ -29,14 +29,14 @@ mistune==0.7.4
 nbconvert==5.1.1
 nbformat==4.3.0
 notebook==4.4.1
-numpy==1.12.1
+numpy==1.14.2
 packaging==16.8
 pandocfilters==1.4.1
 parso==0.2.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
-protobuf==3.2.0
+protobuf==3.5.2.post1
 ptyprocess==0.5.1
 pyasn1==0.4.2
 Pygments==2.2.0
