--- a/face_generation/requirements.txt
+++ b/face_generation/requirements.txt
@@ -6,6 +6,7 @@ backcall==0.1.0
 bleach==1.5.0
 botocore==1.8.20
 certifi==2018.4.16
+cycler==0.10.0
 decorator==4.0.11
 Django==2.0.4
 docutils==0.14
@@ -25,8 +26,10 @@ jupyter-client==5.2.3
 jupyter-core==4.4.0
 jupyterlab==0.32.0
 jupyterlab-launcher==0.10.5
+kiwisolver==1.0.1
 Markdown==2.6.11
 MarkupSafe==1.0
+matplotlib==2.2.2
 mistune==0.7.4
 nbconvert==5.1.1
 nbformat==4.3.0
